com/abassi/team4A/MySQLParser.java
// Generated from C:/Users/robin.NOIGLLADO/IdeaProjects/AbassiProject/src/com/abassi/team4A\MySQLParser.g4 by ANTLR 4.5.3
package com.abassi.team4A;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MySQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SELECT=1, FROM=2, WHERE=3, AND=4, OR=5, XOR=6, IS=7, AS=8, NULL=9, DISTINCT=10, 
		LIKE=11, IN=12, EXISTS=13, ALL=14, ANY=15, TRUE=16, FALSE=17, DIVIDE=18, 
		MOD=19, BETWEEN=20, REGEXP=21, STRQUOTE=22, STRDOUBLEQUOTE=23, PLUS=24, 
		MINUS=25, NEGATION=26, VERTBAR=27, BITAND=28, POWER_OP=29, BINARY=30, 
		SHIFT_LEFT=31, SHIFT_RIGHT=32, ESCAPE=33, ASTERISK=34, RPAREN=35, LPAREN=36, 
		RBRACK=37, LBRACK=38, COLON=39, ALL_FIELDS=40, EQ=41, LTH=42, GTH=43, 
		NOT_EQ=44, NOT=45, LET=46, GET=47, SEMI=48, COMMA=49, DOT=50, COLLATE=51, 
		INNER=52, OUTER=53, JOIN=54, COUNT=55, CROSS=56, USING=57, INDEX=58, KEY=59, 
		ORDER=60, GROUP=61, BY=62, FOR=63, USE=64, IGNORE=65, SUM=66, AVG=67, 
		MIN=68, MAX=69, PARTITION=70, STRAIGHT_JOIN=71, NATURAL=72, LEFT=73, RIGHT=74, 
		OJ=75, ON=76, ID=77, INT=78, NEWLINE=79, WS=80, USER_VAR=81, STRING_LITERAL=82;
	public static final int
		RULE_stat = 0, RULE_schema_name = 1, RULE_select_clause = 2, RULE_val_distinct = 3, 
		RULE_table_name = 4, RULE_table_alias = 5, RULE_col_compress = 6, RULE_xml_compress = 7, 
		RULE_column_name = 8, RULE_aggegrate = 9, RULE_column_value = 10, RULE_aggegrate_column_name = 11, 
		RULE_xml_column_value = 12, RULE_xml_column_name = 13, RULE_xml_column_alias = 14, 
		RULE_xml_block = 15, RULE_column_block = 16, RULE_xml_list_clause = 17, 
		RULE_xml_tag = 18, RULE_column_name_alias = 19, RULE_index_name = 20, 
		RULE_column_list = 21, RULE_column_list_clause = 22, RULE_from_clause = 23, 
		RULE_select_key = 24, RULE_where_clause = 25, RULE_expression = 26, RULE_element = 27, 
		RULE_element_column_name = 28, RULE_right_element = 29, RULE_left_element = 30, 
		RULE_target_element = 31, RULE_relational_op = 32, RULE_expr_op = 33, 
		RULE_between_op = 34, RULE_is_or_is_not = 35, RULE_simple_expression = 36, 
		RULE_table_references = 37, RULE_table_reference = 38, RULE_table_factor1 = 39, 
		RULE_table_factor2 = 40, RULE_table_factor3 = 41, RULE_table_factor4 = 42, 
		RULE_table_atom = 43, RULE_join_clause = 44, RULE_join_condition = 45, 
		RULE_index_hint_list = 46, RULE_index_options = 47, RULE_index_hint = 48, 
		RULE_index_list = 49, RULE_partition_clause = 50, RULE_partition_names = 51, 
		RULE_partition_name = 52, RULE_subquery_alias = 53, RULE_subquery = 54;
	public static final String[] ruleNames = {
		"stat", "schema_name", "select_clause", "val_distinct", "table_name", 
		"table_alias", "col_compress", "xml_compress", "column_name", "aggegrate", 
		"column_value", "aggegrate_column_name", "xml_column_value", "xml_column_name", 
		"xml_column_alias", "xml_block", "column_block", "xml_list_clause", "xml_tag", 
		"column_name_alias", "index_name", "column_list", "column_list_clause", 
		"from_clause", "select_key", "where_clause", "expression", "element", 
		"element_column_name", "right_element", "left_element", "target_element", 
		"relational_op", "expr_op", "between_op", "is_or_is_not", "simple_expression", 
		"table_references", "table_reference", "table_factor1", "table_factor2", 
		"table_factor3", "table_factor4", "table_atom", "join_clause", "join_condition", 
		"index_hint_list", "index_options", "index_hint", "index_list", "partition_clause", 
		"partition_names", "partition_name", "subquery_alias", "subquery"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'''", "'\"'", 
		"'+'", "'-'", "'~'", "'|'", "'&'", "'^'", "'binary'", "'<<'", "'>>'", 
		"'escape'", "'*'", "')'", "'('", "']'", "'['", "':'", "'.*'", "'='", "'<'", 
		"'>'", "'!='", "'not'", "'<='", "'>='", "';'", "','", "'.'", "'collate'", 
		"'inner'", "'outer'", "'join'", null, "'cross'", "'using'", "'index'", 
		"'key'", "'order'", "'group'", "'by'", "'for'", "'use'", "'ignore'", null, 
		null, null, null, "'partition'", "'straight_join'", "'natural'", "'left'", 
		"'right'", "'oj'", "'on'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "SELECT", "FROM", "WHERE", "AND", "OR", "XOR", "IS", "AS", "NULL", 
		"DISTINCT", "LIKE", "IN", "EXISTS", "ALL", "ANY", "TRUE", "FALSE", "DIVIDE", 
		"MOD", "BETWEEN", "REGEXP", "STRQUOTE", "STRDOUBLEQUOTE", "PLUS", "MINUS", 
		"NEGATION", "VERTBAR", "BITAND", "POWER_OP", "BINARY", "SHIFT_LEFT", "SHIFT_RIGHT", 
		"ESCAPE", "ASTERISK", "RPAREN", "LPAREN", "RBRACK", "LBRACK", "COLON", 
		"ALL_FIELDS", "EQ", "LTH", "GTH", "NOT_EQ", "NOT", "LET", "GET", "SEMI", 
		"COMMA", "DOT", "COLLATE", "INNER", "OUTER", "JOIN", "COUNT", "CROSS", 
		"USING", "INDEX", "KEY", "ORDER", "GROUP", "BY", "FOR", "USE", "IGNORE", 
		"SUM", "AVG", "MIN", "MAX", "PARTITION", "STRAIGHT_JOIN", "NATURAL", "LEFT", 
		"RIGHT", "OJ", "ON", "ID", "INT", "NEWLINE", "WS", "USER_VAR", "STRING_LITERAL"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MySQLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MySQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StatContext extends ParserRuleContext {
		public List<Select_clauseContext> select_clause() {
			return getRuleContexts(Select_clauseContext.class);
		}
		public Select_clauseContext select_clause(int i) {
			return getRuleContext(Select_clauseContext.class,i);
		}
		public TerminalNode SEMI() { return getToken(MySQLParser.SEMI, 0); }
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitStat(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(110);
				select_clause();
				}
				}
				setState(113); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SELECT );
			setState(116);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(115);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Schema_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MySQLParser.ID, 0); }
		public Schema_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterSchema_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitSchema_name(this);
		}
	}

	public final Schema_nameContext schema_name() throws RecognitionException {
		Schema_nameContext _localctx = new Schema_nameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_schema_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_clauseContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(MySQLParser.SELECT, 0); }
		public Column_list_clauseContext column_list_clause() {
			return getRuleContext(Column_list_clauseContext.class,0);
		}
		public Val_distinctContext val_distinct() {
			return getRuleContext(Val_distinctContext.class,0);
		}
		public TerminalNode FROM() { return getToken(MySQLParser.FROM, 0); }
		public Table_referencesContext table_references() {
			return getRuleContext(Table_referencesContext.class,0);
		}
		public Where_clauseContext where_clause() {
			return getRuleContext(Where_clauseContext.class,0);
		}
		public Select_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterSelect_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitSelect_clause(this);
		}
	}

	public final Select_clauseContext select_clause() throws RecognitionException {
		Select_clauseContext _localctx = new Select_clauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_select_clause);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(SELECT);
			setState(122);
			_la = _input.LA(1);
			if (_la==DISTINCT) {
				{
				setState(121);
				val_distinct();
				}
			}

			setState(124);
			column_list_clause();
			setState(127);
			_la = _input.LA(1);
			if (_la==FROM) {
				{
				setState(125);
				match(FROM);
				setState(126);
				table_references();
				}
			}

			setState(130);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(129);
				where_clause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Val_distinctContext extends ParserRuleContext {
		public TerminalNode DISTINCT() { return getToken(MySQLParser.DISTINCT, 0); }
		public Val_distinctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_val_distinct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterVal_distinct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitVal_distinct(this);
		}
	}

	public final Val_distinctContext val_distinct() throws RecognitionException {
		Val_distinctContext _localctx = new Val_distinctContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_val_distinct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(DISTINCT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_nameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MySQLParser.ID, 0); }
		public Table_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterTable_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitTable_name(this);
		}
	}

	public final Table_nameContext table_name() throws RecognitionException {
		Table_nameContext _localctx = new Table_nameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_table_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Table_aliasContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MySQLParser.ID, 0); }
		public Table_aliasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_alias; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterTable_alias(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitTable_alias(this);
		}
	}

	public final Table_aliasContext table_alias() throws RecognitionException {
		Table_aliasContext _localctx = new Table_aliasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_table_alias);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Col_compressContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(MySQLParser.PLUS, 0); }
		public Col_compressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_col_compress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterCol_compress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitCol_compress(this);
		}
	}

	public final Col_compressContext col_compress() throws RecognitionException {
		Col_compressContext _localctx = new Col_compressContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_col_compress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Xml_compressContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(MySQLParser.PLUS, 0); }
		public Xml_compressContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xml_compress; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterXml_compress(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitXml_compress(this);
		}
	}

	public final Xml_compressContext xml_compress() throws RecognitionException {
		Xml_compressContext _localctx = new Xml_compressContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_xml_compress);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_nameContext extends ParserRuleContext {
		public Column_valueContext column_value() {
			return getRuleContext(Column_valueContext.class,0);
		}
		public Col_compressContext col_compress() {
			return getRuleContext(Col_compressContext.class,0);
		}
		public TerminalNode AS() { return getToken(MySQLParser.AS, 0); }
		public Column_name_aliasContext column_name_alias() {
			return getRuleContext(Column_name_aliasContext.class,0);
		}
		public Column_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterColumn_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitColumn_name(this);
		}
	}

	public final Column_nameContext column_name() throws RecognitionException {
		Column_nameContext _localctx = new Column_nameContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_column_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			_la = _input.LA(1);
			if (_la==PLUS) {
				{
				setState(142);
				col_compress();
				}
			}

			setState(145);
			column_value();
			setState(148);
			_la = _input.LA(1);
			if (_la==AS) {
				{
				setState(146);
				match(AS);
				setState(147);
				column_name_alias();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AggegrateContext extends ParserRuleContext {
		public TerminalNode SUM() { return getToken(MySQLParser.SUM, 0); }
		public TerminalNode MAX() { return getToken(MySQLParser.MAX, 0); }
		public TerminalNode AVG() { return getToken(MySQLParser.AVG, 0); }
		public TerminalNode MIN() { return getToken(MySQLParser.MIN, 0); }
		public TerminalNode COUNT() { return getToken(MySQLParser.COUNT, 0); }
		public AggegrateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggegrate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterAggegrate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitAggegrate(this);
		}
	}

	public final AggegrateContext aggegrate() throws RecognitionException {
		AggegrateContext _localctx = new AggegrateContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_aggegrate);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_la = _input.LA(1);
			if ( !(((((_la - 55)) & ~0x3f) == 0 && ((1L << (_la - 55)) & ((1L << (COUNT - 55)) | (1L << (SUM - 55)) | (1L << (AVG - 55)) | (1L << (MIN - 55)) | (1L << (MAX - 55)))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Column_valueContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MySQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MySQLParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(MySQLParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(MySQLParser.DOT, i);
		}
		public Schema_nameContext schema_name() {
			return getRuleContext(Schema_nameContext.class,0);
		}
		public AggegrateContext aggegrate() {
			return getRuleContext(AggegrateContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(MySQLParser.LPAREN, 0); }
		public Aggegrate_column_nameContext aggegrate_column_name() {
			return getRuleContext(Aggegrate_column_nameContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MySQLParser.RPAREN, 0); }
		public TerminalNode ASTERISK() { return getToken(MySQLParser.ASTERISK, 0); }
		public Column_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterColumn_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitColumn_value(this);
		}
	}

	public final Column_valueContext column_value() throws RecognitionException {
		Column_valueContext _localctx = new Column_valueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_column_value);
		int _la;
		try {
			setState(177);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(159);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(155);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
					case 1:
						{
						setState(152);
						schema_name();
						setState(153);
						match(DOT);
						}
						break;
					}
					setState(157);
					match(ID);
					setState(158);
					match(DOT);
					}
					break;
				}
				setState(161);
				match(ID);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				aggegrate();
				setState(163);
				match(LPAREN);
				setState(164);
				aggegrate_column_name();
				setState(165);
				match(RPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				_la = _input.LA(1);
				if (_la==ID) {
					{
					setState(170);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
					case 1:
						{
						setState(167);
						schema_name();
						setState(168);
						match(DOT);
						}
						break;
					}
					setState(172);
					match(ID);
					setState(173);
					match(DOT);
					}
				}

				setState(176);
				match(ASTERISK);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Aggegrate_column_nameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MySQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MySQLParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(MySQLParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(MySQLParser.DOT, i);
		}
		public Schema_nameContext schema_name() {
			return getRuleContext(Schema_nameContext.class,0);
		}
		public Aggegrate_column_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggegrate_column_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterAggegrate_column_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitAggegrate_column_name(this);
		}
	}

	public final Aggegrate_column_nameContext aggegrate_column_name() throws RecognitionException {
		Aggegrate_column_nameContext _localctx = new Aggegrate_column_nameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_aggegrate_column_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(182);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(179);
					schema_name();
					setState(180);
					match(DOT);
					}
					break;
				}
				setState(184);
				match(ID);
				setState(185);
				match(DOT);
				}
				break;
			}
			setState(188);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Xml_column_valueContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(MySQLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(MySQLParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(MySQLParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(MySQLParser.DOT, i);
		}
		public Schema_nameContext schema_name() {
			return getRuleContext(Schema_nameContext.class,0);
		}
		public Xml_column_valueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xml_column_value; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).enterXml_column_value(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MySQLParserListener ) ((MySQLParserListener)listener).exitXml_column_value(this);
		}
	}

	public final Xml_column_valueContext xml_column_value() throws RecognitionException {
		Xml_column_valueContext _localctx = new Xml_column_valueContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_xml_column_value);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(193);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(190);
					schema_name();
					setState(191);
					match(DOT);
					}
					break;
				}
				setState(195);
				match(ID);
				setState(196);
				match(DOT);
				}
				break;
			}
			setState(199);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
